--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1> Hello, world </h1>
+<!DOCTYPE html> 
+<html>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		<h1> Hello, world </h1>
+		<p> Call me Owen </p>
+	</body>
+</html>
