--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<title>A Whale of Greeting</title>
+		<title>A Whale of A Greeting</title>
 	</head>
 	<body>
 		<h1> Hello, world </h1>
