--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1> About </h1>
 		<p> 
-		 This site is a sample project for the <strong>awesome</strong> Git tutorial <em> Learn Enough™ Git to Be Dangerous </em>
+		 This site is a sample project for the <strong>awesome</strong> Git tutorial <a href = "http://learnenough.com/git-tutorial"><em> Learn Enough™ Git to Be Dangerous </em></a>
 		</p>
 		<img src ="images/breaching_whale.jpg"/>
 	</body>
