--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
 		<p> 
 		 This site is a sample project for the <strong>awesome</strong> Git tutorial <a href = "http://learnenough.com/git-tutorial"><em> Learn Enough™ Git to Be Dangerous </em></a>
 		</p>
-		<img src ="images/breaching_whale.jpg"/>
+		<a href="https://www.flickr.com/photos/28883788@N04/10097824543">
+      	<img src="images/breaching_whale.jpg">
+    	</a>
 	</body>
 </html>
