--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>A Whale of A Greeting</title>
+		<!-- Add something here to fix trademark -->
 	</head>
 	<body>
 		<h1> Hello, world </h1>
