--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>A Whale of A Greeting</title>
+		<meta charset="utf-8">
 		<!-- Add something here to fix trademark -->
 	</head>
 	<body>
