--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<h1>About Us</h1>
+		<meta charset="utf-8">
 		<p> 
 		 This site is a sample project for the <strong>awesome</strong> Git tutorial <a href = "http://learnenough.com/git-tutorial"><em> Learn Enough™ Git to Be Dangerous </em></a>
 		</p>
